--- a/chat.html
+++ b/chat.html
@@ -8,6 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+
     <div id="toast-container"></div>
     <div id="global-loader" class="loader-overlay hidden"><div class="spinner"></div></div>
 
@@ -17,63 +18,72 @@
             <div class="chat-header-info" onclick="Fluxgram.ui.showProfile()">
                 <div class="avatar" id="chat-avatar"></div>
                 <div class="chat-header-text">
-                    <div class="chat-name" id="chat-name">...</div>
-                    <div class="chat-status" id="chat-status">...</div>
+                    <div class="chat-name" id="chat-name">Loading...</div>
+                    <div id="chat-status" class="chat-status">Connecting...</div>
                 </div>
             </div>
             <div style="display:flex; gap: 5px;">
-                <button class="icon-btn" onclick="Fluxgram.call.startCall('video')"><i class="fas fa-video"></i></button>
-                <button class="icon-btn" onclick="Fluxgram.call.startCall('audio')"><i class="fas fa-phone-alt"></i></button>
+                <button class="icon-btn" id="btn-call-audio" onclick="Fluxgram.call.startCall('audio')"><i class="fas fa-phone-alt"></i></button>
+                <button class="icon-btn" onclick="Fluxgram.ui.showProfile()"><i class="fas fa-info-circle"></i></button>
             </div>
         </div>
 
         <div class="chat-bg">
             <div class="messages-container" id="messages-container"></div>
-            <div id="typing-indicator" class="typing-indicator hidden">Typing...</div>
-
-            <div class="input-area">
+            <div id="emoji-panel" class="hidden">
+                <span onclick="Fluxgram.chat.addEmoji('😀')">😀</span><span onclick="Fluxgram.chat.addEmoji('😂')">😂</span>
+                <span onclick="Fluxgram.chat.addEmoji('❤️')">❤️</span><span onclick="Fluxgram.chat.addEmoji('😍')">😍</span>
+                <span onclick="Fluxgram.chat.addEmoji('👍')">👍</span><span onclick="Fluxgram.chat.addEmoji('🔥')">🔥</span>
+                <span onclick="Fluxgram.chat.addEmoji('😭')">😭</span><span onclick="Fluxgram.chat.addEmoji('😎')">😎</span>
+            </div>
+            <div class="input-area" id="input-area">
+                <button class="icon-btn" onclick="Fluxgram.chat.toggleEmoji()"><i class="far fa-smile"></i></button>
                 <button class="icon-btn" onclick="document.getElementById('chat-file-input').click()"><i class="fas fa-paperclip"></i></button>
-                <input type="file" id="chat-file-input" class="hidden" onchange="Fluxgram.chat.sendImage(event)">
-                <div class="input-wrapper"><textarea id="msg-input" placeholder="Message..."></textarea></div>
-                <button class="icon-btn hidden" id="btn-send-text" onclick="Fluxgram.chat.send()"><i class="fas fa-paper-plane"></i></button>
-                <button class="icon-btn" id="btn-record-voice" onmousedown="Fluxgram.chat.startVoice()" onmouseup="Fluxgram.chat.stopVoice()"><i class="fas fa-microphone"></i></button>
+                <input type="file" id="chat-file-input" class="hidden" accept="image/*" onchange="Fluxgram.chat.sendImage(event)">
+                <div class="input-wrapper"><textarea id="msg-input" class="msg-input" rows="1" placeholder="Message..."></textarea></div>
+                <button class="icon-btn hidden" id="btn-send-text" onclick="Fluxgram.chat.send()"><i class="fas fa-paper-plane" style="color:var(--primary);"></i></button>
+                <button class="icon-btn" id="btn-record-voice" onmousedown="Fluxgram.chat.startVoice()" onmouseup="Fluxgram.chat.stopVoice()" ontouchstart="Fluxgram.chat.startVoice()" ontouchend="Fluxgram.chat.stopVoice()"><i class="fas fa-microphone"></i></button>
             </div>
         </div>
     </div>
 
-    <div id="call-screen" class="hidden call-overlay">
-        <div style="text-align: center; margin-top: 20px;">
-            <div class="call-avatar" id="callAvatarBox"></div>
-            <h2 id="callName" style="font-size: 1.8rem; margin-top: 15px;">...</h2>
-            <p id="callStatus" style="opacity: 0.8;">Calling...</p>
-        </div>
+    <div id="call-screen" class="hidden call-overlay-new" style="position:fixed; inset:0; z-index:99999;">
+        <video id="remoteVideo" style="width:100%; height:100%; object-fit:cover; position:absolute; inset:0; z-index:1;" autoplay playsinline></video>
+        <video id="localVideo" style="width:100px; height:140px; position:absolute; top:30px; right:20px; border-radius:12px; z-index:3; border:2px solid var(--accent);" autoplay playsinline muted></video>
         
-        <video id="remoteVideo" class="hidden" style="position: absolute; inset: 0; width:100%; height:100%; object-fit:cover;"></video>
-        <video id="localVideo" class="hidden" style="position: absolute; top:20px; right:20px; width:100px; border-radius:10px; border:2px solid var(--accent);" autoplay muted></video>
+        <div style="position:relative; z-index:2; margin-top:20px;">
+            <div class="avatar" id="call-avatar" style="width:120px; height:120px; margin:0 auto; font-size:4rem; border:2px solid white;">U</div>
+            <h2 id="callName" style="color:white; font-size:2rem; margin-top:15px;">Name</h2>
+            <p id="callStatus" style="color:var(--accent); font-size:1.1rem;">Ringing...</p>
+        </div>
 
-        <div class="call-controls-row">
-            <div class="call-action-btn" onclick="Fluxgram.call.toggleSpeaker()">
-                <div class="call-circle-btn"><i class="fas fa-volume-up"></i></div>
-                <span>Speaker</span>
-            </div>
-            <div class="call-action-btn" onclick="Fluxgram.call.toggleVideo()">
-                <div class="call-circle-btn"><i class="fas fa-video-slash"></i></div>
-                <span>Video</span>
-            </div>
-            <div class="call-action-btn" onclick="Fluxgram.call.toggleMute()">
-                <div class="call-circle-btn"><i class="fas fa-microphone"></i></div>
-                <span>Mute</span>
-            </div>
-            <div class="call-action-btn" onclick="Fluxgram.call.endCall()">
-                <div class="call-circle-btn hangup"><i class="fas fa-phone-slash"></i></div>
-                <span>End Call</span>
-            </div>
+        <div style="position:relative; z-index:2; width:100%; display:flex; justify-content:space-around; align-items:center; padding-bottom:20px;">
+            <div class="call-btn-circle" onclick="Fluxgram.call.toggleSpeaker()"><i class="fas fa-volume-up"></i><br><span style="font-size:0.7rem;">Speaker</span></div>
+            <div class="call-btn-circle" id="call-video-toggle" onclick="Fluxgram.call.toggleVideo()"><i class="fas fa-video-slash"></i><br><span style="font-size:0.7rem;">Video</span></div>
+            <div class="call-btn-circle" onclick="Fluxgram.call.toggleMic()"><i id="mic-icon" class="fas fa-microphone"></i><br><span style="font-size:0.7rem;">Mute</span></div>
+            <div class="call-btn-circle danger" onclick="Fluxgram.call.endCall()"><i class="fas fa-phone-slash"></i><br><span style="font-size:0.7rem;">End</span></div>
+        </div>
+
+        <div id="call-incoming-btns" class="hidden" style="position:relative; z-index:10; width:100%; display:flex; justify-content:center; gap:50px;">
+             <div class="call-btn-circle danger" onclick="Fluxgram.call.endCall()"><i class="fas fa-phone-slash"></i></div>
+             <div class="call-btn-circle" style="background:var(--success);" onclick="Fluxgram.call.acceptCall()"><i class="fas fa-phone"></i></div>
         </div>
     </div>
 
-    <div id="msg-context-menu" class="hidden msg-menu">
-        <div class="menu-item" onclick="Fluxgram.chat.deleteForMe()"><i class="fas fa-trash"></i> Delete for me</div>
-        <div class="menu-item danger" id="btn-delete-everyone" onclick="Fluxgram.chat.deleteForEveryone()"><i class="fas fa-ban"></i> Delete for everyone</div>
+    <div id="profile-view" class="hidden" style="position:fixed; inset:0; background:#1c242f; z-index:9000; overflow-y:auto;">
+        <div class="premium-gradient">
+            <button class="icon-btn" onclick="Fluxgram.ui.hideProfile()" style="position:absolute; top:20px; left:15px; color:white;"><i class="fas fa-arrow-left"></i></button>
+            <div class="avatar" id="pv-avatar" style="width:140px; height:140px; margin:0 auto; border:4px solid white;">U</div>
+            <h2 id="pv-name" style="color:white; margin-top:10px;">Name</h2>
+            <div style="display:flex; justify-content:center; gap:20px; margin-top:20px;">
+                <div class="profile-action-btn" onclick="Fluxgram.ui.hideProfile()"><div class="icon"><i class="fas fa-comment"></i></div><span>Chat</span></div>
+                <div class="profile-action-btn" onclick="Fluxgram.call.startCall('audio')"><div class="icon"><i class="fas fa-phone"></i></div><span>Call</span></div>
+            </div>
+        </div>
+        <div class="info-card" style="margin:20px 15px;">
+            <div class="info-row"><div class="val" id="pv-bio">...</div><div class="lbl">Bio</div></div>
+            <div class="info-row"><div class="val" id="pv-username">...</div><div class="lbl">Username</div></div>
+        </div>
     </div>
 
     <script type="module" src="app.js?v=9"></script>
