--- a/chat.html
+++ b/chat.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#1c242f">
     <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/3128/3128210.png">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=5">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
