--- a/dashboard.html
+++ b/dashboard.html
@@ -34,6 +34,11 @@
             </div>
         </div>
 
+        <div id="connection-status-bar" class="connection-bar hidden">
+            <i id="connection-icon" class="fas fa-sync-alt fa-spin"></i>
+            <span id="connection-text">Updating...</span>
+        </div>
+
         <div class="scroll-area">
             <div id="search-results" class="hidden" style="border-bottom: 2px solid var(--divider);"></div>
             <div id="chat-list">
@@ -136,6 +141,6 @@
         </div>
     </div>
 
-    <script type="module" src="app.js?v=35"></script>
+    <script type="module" src="app.js?v=40"></script>
 </body>
 </html>
